--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,22 +28,13 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      # 4️⃣ Run tests with Jest
-      - name: Run tests
+      # 4️⃣ Run tests with coverage
+      - name: Run tests with coverage
         run: npm test
 
-      # 5️⃣ Generate coverage (optional)
-      - name: Generate coverage
-        run: npm run test -- --coverage || echo "Coverage skipped"
-
-      # 6️⃣ Upload coverage artifact if exists
-       - name: Upload coverage report
+      # 5️⃣ Upload coverage artifact
+      - name: Upload coverage report
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report-${{ matrix.node-version }}  # unique per Node version
           path: coverage/lcov.info
-
-
-
-
-          
